--- a/shopping-cart-app/src/component/Navbar/NavBar.css
+++ b/shopping-cart-app/src/component/Navbar/NavBar.css
@@ -31,6 +31,7 @@
   border-radius: 50%;
   color: white;
   font-size: 0.7rem;
+  font-weight: 1000;
   top: -10px;
   right: -5px;
   display: flex;
